# glTF-Compressonator

./: .gitignore  .gitmodules  CMakeLists.txt
Compressonator/: CMakeLists.txt
Compressonator/Applications/: CMakeLists.txt
Compressonator/Applications/CompressonatorCLI/: CMakeLists.txt
Compressonator/Applications/CompressonatorCLI/Make/: CMakeLists.txt
Compressonator/Applications/_Plugins/: CMakeLists.txt
Compressonator/Applications/_Plugins/CAnalysis/: CMakeLists.txt
Compressonator/Applications/_Plugins/CImage/: CMakeLists.txt
Compressonator/Applications/_Plugins/CImage/KTX/: KTX.cpp
Compressonator/Applications/_Plugins/Common/: MIPS.cpp  MIPS.h  cmdline.cpp
Compressonator/Applications/_Plugins/Common/gltf/: tiny_gltf2_utils.cpp
Compressonator/math/: CMakeLists.txt
Compressonator/math/source/: JMLFuncs.cpp
Compressonator/mesh/include/mesh/JRT/: JRTBoundingBox.h
Compressonator/mesh/source/: TootleRaytracer.cpp  clustering.cpp  d3dwm.cpp  feedback.cpp  gdiwm.cpp  triorder.cpp
app/: CMakeLists.txt
app/CLI/: CMakeLists.txt
app/CLI/source/: CompressonatorCLI.cpp
cmake/: defines.cmake  platform.cmake  utils.cmake
cmake/Modules/: Findglm.cmake  Findopenexr.cmake  Findstb.cmake
compressonator/: CMakeLists.txt
compressonator/codec/: CMakeLists.txt
compressonator/codec/include/codec/: Codec.h
compressonator/codec/include/codec/ASTC/: ASTC_Decode.h  ASTC_Definitions.h  ASTC_Encode.h  ASTC_Encode_Kernel.h  Codec_ASTC.h
compressonator/codec/include/codec/ATC/: Codec_ATC.h
compressonator/codec/include/codec/ATI/: Codec_ATI1N.h  Codec_ATI2N.h
compressonator/codec/include/codec/BC6H/: BC6H_Definitions.h  BC6H_Encode.h  BC6H_Library.h  Codec_BC6H.h
compressonator/codec/include/codec/BC7/: BC7_Definitions.h  Codec_BC7.h
compressonator/codec/include/codec/Block/: Codec_Block.h
compressonator/codec/include/codec/Buffer/: CodecBuffer.h
compressonator/codec/include/codec/DXT/: Codec_DXT1.h  Codec_DXT3.h  Codec_DXT5.h  Codec_DXT5_Swizzled.h
compressonator/codec/include/codec/DXTC/: Codec_DXTC.h
compressonator/codec/include/codec/ETC/: Codec_ETC.h  Codec_ETC2.h
compressonator/codec/source/: Codec.cpp
compressonator/common/: CMakeLists.txt
compressonator/common/include/common/: Common_Kernel.h  Common_KernelDef.h  HDR_Encode.h
compressonator/common/source/: Compressonator.cpp
compressonator/compress/include/compress/: Compress.h
compressonator/compress/source/: Compress.cpp
compressonator/decode/: CMakeLists.txt
compressonator/decode/source/: GPU_Decode.cpp  GPU_DecodeBase.cpp
compressonator/math/include/math/: JML.h  JMLSSEVec.h  JRTCommon.h  MathMacros.h  TootlePCH.h
compressonator/mesh/: CMakeLists.txt
compressonator/mesh/include/mesh/: TootlePCH.h  error.h  tootlelib.h
compressonator/mesh/include/mesh/JRT/: JRTCommon.h  JRTKDTree.h
compressonator/mesh/source/: Stripifier.cpp  Timer.cpp  d3doverdrawwindow.cpp  fit.cpp  overdraw.cpp  soup.cpp  souptomesh.cpp  tootlelib.cpp  triorder.cpp
compressonator/mesh/source/JRT/: JRTBoundingBox.cpp  JRTCamera.cpp  JRTCore.cpp  JRTCoreUtils.cpp  JRTH2KDTreeBuilder.cpp  JRTHeuristicKDTreeBuilder.cpp  JRTKDTree.cpp  JRTKDTreeBuilder.cpp  JRTMesh.cpp  JRTOrthoCamera.cpp  JRTPPMImage.cpp  JRTTriangleIntersection.cpp
examples/: Compressonator_Test.cpp
plugin/plugin/: CMakeLists.txt
plugin/plugin/source/: ATIFormats.cpp  MIPS.cpp  Misc.cpp  ModelData.cpp  PSNR.cpp  PluginManager.cpp  cmdline.cpp
source/Applications/_Plugins/C3DModel_viewers/Vulkan/Util/: TextureVK.cpp
source/Applications/_Plugins/C3DModel_viewers/glTF_DX12_EX/DX12Util/: TextureDX12.cpp
source/Applications/_Plugins/CAnalysis/Analysis/Make/: CMakeLists.txt
source/Applications/_Plugins/CFilter/Make/: CMakeLists.txt
source/Applications/_Plugins/CGPUDecode/Vulkan/: GPU_Vulkan.h
source/Applications/_Plugins/CImage/ASTC/Make/: CMakeLists.txt
source/Applications/_Plugins/CImage/DDS/Make/: CMakeLists.txt
source/Applications/_Plugins/CImage/EXR/: EXR.h
source/Applications/_Plugins/CImage/EXR/Make/: CMakeLists.txt
source/Applications/_Plugins/CImage/KTX/Make/: CMakeLists.txt
source/Applications/_Plugins/CImage/TGA/Make/: CMakeLists.txt
source/Applications/_Plugins/Common/: TC_PluginAPI.h
source/Applications/_Plugins/Common/model_viewer/: ModelTexture.cpp
source/Source/: Compressonator.cpp
source/Source/Codec/: Codec.cpp
source/Source/Codec/ASTC/: ASTC_Host.cpp  Codec_ASTC.cpp
source/Source/Codec/Buffer/: CodecBuffer_Block.cpp
